# euro2022

./: .pre-commit-config.yaml  Procfile  README.md  explore.ipynb  mean_iv_distance.ipynb  player_stats.ipynb  pyproject.toml  requirements.txt  setup.sh  streamlit_app.py  towards_production.ipynb
euro2022/: pyvenv.cfg
euro2022/share/jupyter/nbextensions/pydeck/: index.js
opponent_analysis/: config.py  data.py  kpis.py  preprocessing.py  streamlit_app.py
